Fix HTML formatting for 'Tür' select options

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <label>Ad Soyad*</label><input id="adSoyadInput" required />
         <label>Telefon*</label><input id="telefonInput" required />
         <label>Dernek*</label><select id="dernekSelect"><option value="">Seçiniz</option></select>
-        <label>Tür</label><select id="turSelect"><option>Tavuk</option><option>Horoz</option><option>Kaz</option><option>Ördek</option><option>Tavşan</option><option>Güvercin</option><option>Hindi</option</select>
+        <label>Tür</label><select id="turSelect"><option>Tavuk</option><option>Horoz</option><option>Kaz</option><option>Ördek</option><option>Tavşan</option><option>Güvercin</option><option>Hindi</option></select>
         <label>K/T</label><select id="tipSelect"><option value="K">Kolleksiyon</option><option value="T">Tek Hayvan</option></select>
         <label>Irk</label><select id="irkSelect"><option value="">Seçiniz</option></select>
         <label>Cins</label><select id="cinsSelect"><option value="">Seçiniz</option></select>
