--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <label>Cins</label><select id="cinsSelect"><option value="">Seçiniz</option></select>
         <label>Renk</label><select id="renkSelect"><option value="">Seçiniz</option></select>
         <label>Yıl</label><input id="yilInput" type="number" />
-        <label>Bilezik No*</label><input id="bilezikInput" placeholder="TR..." required />
+        <label>Bilezik No*</label><input id="bilezikInput" placeholder="TR 25-12345..." required />
         <div style="margin-top:10px;"><input type="checkbox" id="onay" required /> <label for="onay">Girilen bilgilerin doğruluğunu ve sergi koşullarını onaylıyorum.</label></div>
         <button type="submit" style="margin-top:15px;">💾 Kaydet</button>
         <div id="successMsg" class="success">✅ Kayıt başarıyla eklendi!</div>
